# RLGymPPO_CPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RLBotClient.cpp  RLBotClient.h  examplemain.cpp
RLGymPPO_CPP/: CMakeLists.txt  README.md
RLGymPPO_CPP/RLGymSim_CPP/: CMakeLists.txt  README.md
RLGymPPO_CPP/RLGymSim_CPP/RocketSim/src/: RLConst.h
RLGymPPO_CPP/RLGymSim_CPP/RocketSim/src/Sim/Arena/ArenaConfig/: ArenaConfig.h
RLGymPPO_CPP/RLGymSim_CPP/RocketSim/src/Sim/Ball/: Ball.cpp
RLGymPPO_CPP/RLGymSim_CPP/src/RLGymSim_CPP/: Framework.h  Gym.cpp  Gym.h  Math.cpp  Math.h
RLGymPPO_CPP/RLGymSim_CPP/src/RLGymSim_CPP/Envs/: Match.cpp  Match.h
RLGymPPO_CPP/RLGymSim_CPP/src/RLGymSim_CPP/Utils/: CommonValues.h
RLGymPPO_CPP/RLGymSim_CPP/src/RLGymSim_CPP/Utils/ActionParsers/: ActionParser.h  DiscreteAction.cpp  DiscreteAction.h
RLGymPPO_CPP/RLGymSim_CPP/src/RLGymSim_CPP/Utils/BasicTypes/: Action.h  GymSpace.h  Lists.h  Quat.cpp  Quat.h
RLGymPPO_CPP/RLGymSim_CPP/src/RLGymSim_CPP/Utils/Gamestates/: GameState.cpp  GameState.h  PhysObj.cpp  PhysObj.h  PlayerData.cpp  PlayerData.h
RLGymPPO_CPP/RLGymSim_CPP/src/RLGymSim_CPP/Utils/OBSBuilders/: DefaultOBS.cpp  DefaultOBS.h  DefaultOBSPadded.cpp  DefaultOBSPadded.h  OBSBuilder.h
RLGymPPO_CPP/RLGymSim_CPP/src/RLGymSim_CPP/Utils/RewardFunctions/: CombinedReward.h  CommonRewards.cpp  CommonRewards.h  RewardFunction.h  ZeroSumReward.cpp  ZeroSumReward.h
RLGymPPO_CPP/RLGymSim_CPP/src/RLGymSim_CPP/Utils/StateSetters/: KickoffState.h  RandomState.cpp  RandomState.h  StateSetter.h
RLGymPPO_CPP/RLGymSim_CPP/src/RLGymSim_CPP/Utils/TerminalConditions/: GoalScoreCondition.h  NoTouchCondition.h  TerminalCondition.h
RLGymPPO_CPP/python_scripts/: metric_receiver.py  render_receiver.py
RLGymPPO_CPP/src/private/RLGymPPO_CPP/: FrameworkTorch.h
RLGymPPO_CPP/src/private/RLGymPPO_CPP/PPO/: DiscretePolicy.cpp  DiscretePolicy.h  ExperienceBuffer.cpp  ExperienceBuffer.h  PPOLearner.cpp  PPOLearner.h  ValueEstimator.h
RLGymPPO_CPP/src/private/RLGymPPO_CPP/Threading/: GameTrajectory.cpp  GameTrajectory.h  ThreadAgent.cpp  ThreadAgent.h  ThreadAgentManager.cpp  ThreadAgentManager.h
RLGymPPO_CPP/src/private/RLGymPPO_CPP/Util/: GradNoiseTracker.cpp  GradNoiseTracker.h  SkillTracker.cpp  SkillTracker.h  ThreadPool.h  TorchFuncs.cpp  TorchFuncs.h  gradscaler.hpp
RLGymPPO_CPP/src/public/RLGymPPO_CPP/: Framework.h  Learner.cpp  Learner.h  LearnerConfig.h  Lists.h
RLGymPPO_CPP/src/public/RLGymPPO_CPP/PPO/: PPOLearnerConfig.h
RLGymPPO_CPP/src/public/RLGymPPO_CPP/Threading/: GameInst.cpp  GameInst.h
RLGymPPO_CPP/src/public/RLGymPPO_CPP/Util/: AvgTracker.h  InferUnit.cpp  InferUnit.h  MetricSender.cpp  MetricSender.h  PolicyInferUnit.cpp  PolicyInferUnit.h  RenderSender.cpp  RenderSender.h  SkillTrackerConfig.h  WelfordRunningStat.h
libsrc/cpp_sockets/src/: simple_cpp_sockets.h
python_scripts/: metric_receiver.py  metrics_receiver.py
rlbot/: CppPythonAgent.cfg  CppPythonAgent.py  port.cfg
src/: Framework.h  Learner.cpp  Learner.h  LearnerConfig.h  Lists.h  Report.h  Timer.h  examplemain.cpp
src/PPO/: DiscretePolicy.cpp  DiscretePolicy.h  ExperienceBuffer.h  PPOLearner.cpp  PPOLearner.h  ValueEstimator.cpp  ValueEstimator.h
src/Threading/: GameInst.cpp  GameInst.h  GameTrajectory.cpp  GameTrajectory.h  ThreadAgent.cpp  ThreadAgent.h  ThreadAgentManager.cpp  ThreadAgentManager.h
src/Util/: AvgTracker.h  MetricSender.cpp  MetricSender.h  Report.h  Timer.h  TorchFuncs.cpp  TorchFuncs.h  WelfordRunningStat.h
tools/: checkpoint_converter.py
